@@ -24,6 +24,7 @@ Alien::bz2                                     = 0.14
 Alien::bz2::Installer                          = 0.05
 Alien::Editline                                = 0.02
 Alien::FFI                                     = 0.08
+Alien::flex                                    = 0.01
 Alien::gmake                                   = 0.06
 Alien::Libarchive                              = 0.22
 Alien::Libarchive::Installer                   = 0.10
