@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added Alien::flex
 
 1.51      2015-03-01 17:20:30 -0500
   - Updated my dists to latest
